tests/baselines/reference/parserArrowFunctionExpression3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression3.ts (4 errors) ====
    a = (() => { } || a)
                   ~~
!!! error TS1005: ')' expected.
                       ~
!!! error TS1005: ';' expected.
    ~
!!! error TS2304: Cannot find name 'a'.
                      ~
!!! error TS2304: Cannot find name 'a'.